# ServerStatus

./: .gitignore  Dockerfile  config.toml  example.env  rustc-ice-2026-01-12T07_01_21-156374.txt
.github/workflows/: release.yml
client/: Cargo.toml
client/src/: grpc.rs  main.rs  status.rs  sys_info.rs
common/: Cargo.toml  build.rs
common/src/: lib.rs
server/: Cargo.toml
server/src/: config.rs  grpc.rs  main.rs  payload.rs  stats.rs
server/src/notifier/: mod.rs
systemd/: stat_client.service
