[package]
edition = "2021"
name = "stat_client"
version = "1.0.0"

authors = ["doge <doge.py@gmail.com>"]
categories = ["monitoring-tools"]
description = "A simple server monitoring tool"
keywords = ["stat_client", "serverstatus", "monitor"]
license = "Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/zdz/ServerStatus-Rust"
repository = "https://github.com/zdz/ServerStatus-Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
chrono = "0.4"

[dependencies]
anyhow = "1"
bytes = { version = "1.11", default-features = false, features = ["serde"] }
chrono = { version = "0.4", default-features = false }
clap = { version = "4.5", features = ["derive", "env"] }
fastrand = "2.3"
hyper = { version = "1.8", default-features = false }
lazy_static = "1.4"
log = "0.4"
md5 = "^0.8"
once_cell = "1"
pretty_env_logger = "0.5"
prettytable-rs = "^0.10"
prost = "0.14"
regex = "1.12"
reqwest = { version = "0.13", features = [
    "json",
    "rustls",
], default-features = false }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
stat_common = { path = "../common", version = "1.1.5" }
sysinfo = "0.30"
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
tonic = { version = "0.14", default-features = false, features = [
    "tls-webpki-roots",
] }
tower = { version = "0.5", default-features = false, features = ["timeout"] }
url = { version = "2.5", default-features = false }

[features]
default = ["sysinfo"]
native = []
sysinfo = []
