[package]
edition = "2021"
name = "stat_common"
version = "1.1.5"

authors = ["doge <doge.py@gmail.com>"]
categories = ["monitoring-tools"]
description = "A simple server monitoring tool"
keywords = ["stat_common", "serverstatus", "monitor"]
license = "Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/zdz/ServerStatus-Rust"
repository = "https://github.com/zdz/ServerStatus-Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1", features = ["serde"] }
prost = "0.14"
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
tonic = "0.14"
tonic-prost = "0.14"


[target.'cfg(not(target_env = "msvc"))'.build-dependencies]
protobuf-src = "1"

[build-dependencies]
chrono = "0.4"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
