[package]
edition = "2021"
name = "stat_server"
version = "1.1.0"

rust-version = "1.76"

authors = ["doge <doge.py@gmail.com>"]
categories = ["monitoring-tools"]
description = "A simple server monitoring tool"
keywords = ["stat_server", "serverstatus", "monitor"]
license = "Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/zdz/ServerStatus-Rust"
repository = "https://github.com/zdz/ServerStatus-Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
chrono = "0.4"

[dependencies]
anyhow = "1"
axum = "0.8"
axum-extra = { version = "0.12", features = ["typed-header"] }
bytes = { version = "1", features = ["serde"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "unicode"] }
futures-util = { version = "0.3", default-features = false }
hyper = { version = "1.2", features = ["full"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
lazy_static = "1.5"
lettre = { version = "0.11", default-features = false, features = [
    "smtp-transport",
    "pool",
    "hostname",
    "builder",
    "rustls-tls",
    "tokio1-rustls-tls",
] }
log = "0.4"
md5 = "^0.8"
minijinja = { version = "2.14", features = ["json", "loader"] }
mime_guess = "2"
once_cell = "1"
pki-types = { package = "rustls-pki-types", version = "1" }
pretty_env_logger = "0.5"
prettytable-rs = "0.10"
prost = "0.14"
reqwest = { version = "0.13", features = [
    "json",
    "rustls",
], default-features = false }
rust-embed = { version = "8.9", features = ["mime-guess"] }
rustls-pemfile = "2"
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
stat_common = { path = "../common", version = "1.1.5" }
tokio = { version = "1", features = ["macros", "signal", "rt-multi-thread"] }
tokio-rustls = "0.26"
toml = "0.8"
tonic = { version = "0.14", features = ["tls-ring", "tls-webpki-roots"] }
tower-http = { version = "0.6", features = ["cors", "add-extension"] }
url = "2.5"
uuid = { version = "1.19", default-features = false, features = [
    "serde",
    "v4",
] }
